Added comments to overview

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,13 @@
     "from signature import *\n",
     "from hash import crypto_hash\n",
     "from swap_test import swap_test"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "We display an encryption quantum circuit. The message is 1001 and the keys are 1011, 1101, 1001, and 0010."
    ]
   },
   {
@@ -47,6 +54,13 @@
    ],
    "source": [
     "state = crypto_hash('1001', ['1011', '1101', '1001', '0010'], verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "The state vector for the resulting quantum state."
    ]
   },
   {
@@ -83,6 +97,13 @@
    ]
   },
   {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "We generate a legitimate signature and a forged signature. In the forged signature, the private keys do do not correspond to the public keys. We attempt to validate each signature."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -94,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +123,7 @@
      "output_type": "stream",
      "text": [
       "{'pass': True, 'bits_failure': '0.0%'}\n",
-      "{'pass': False, 'bits_failure': '69.0476%'}\n"
+      "{'pass': False, 'bits_failure': '66.6667%'}\n"
      ]
     }
    ],
@@ -140,6 +161,13 @@
     "#         fails += 1\n",
     "\n",
     "# print(passes, fails)"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": [
+    "We show an the circuit for a swap test. The swap test tries to determine whether two quantum states are equal."
    ]
   },
   {
@@ -259,7 +287,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
