added comments to overview

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -2,11 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": null,
-=======
-   "execution_count": 10,
->>>>>>> c11ae4b76f0511bc1e4d157df4ff09e0ff149bf9
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,12 +23,12 @@
    "cell_type": "raw",
    "metadata": {},
    "source": [
-    "We display an encryption quantum circuit. The message is 1001 and the keys are 1011, 1101, 1001, and 0010."
+    "We display a quantum circuit used for hashing. The message is 1001 and the keys are 1011, 1101, 1001, and 0010."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -40,18 +36,18 @@
      "output_type": "stream",
      "text": [
       "         ┌───┐                                                            »\n",
-      "q4481_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
+      "q4546_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
       "         ├───┤      │            │           │           │          │     »\n",
-      "q4481_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
+      "q4546_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
       "         └───┘┌─────┴─────┐┌─────┴─────┐┌────┴─────┐┌────┴────┐┌────┴────┐»\n",
-      "q4481_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
+      "q4546_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
       "              └───────────┘└───────────┘└──────────┘└─────────┘└─────────┘»\n",
       "«                                         \n",
-      "«q4481_0: ─────■──────────o─────────■─────\n",
+      "«q4546_0: ─────■──────────o─────────■─────\n",
       "«              │          │         │     \n",
-      "«q4481_1: ─────o──────────■─────────■─────\n",
+      "«q4546_1: ─────o──────────■─────────■─────\n",
       "«         ┌────┴────┐┌────┴────┐┌───┴────┐\n",
-      "«q4481_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
+      "«q4546_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
       "«         └─────────┘└─────────┘└────────┘\n"
      ]
     }
@@ -69,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,11 +115,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
    "execution_count": 6,
-=======
-   "execution_count": 14,
->>>>>>> c11ae4b76f0511bc1e4d157df4ff09e0ff149bf9
    "metadata": {},
    "outputs": [
     {
@@ -131,11 +123,7 @@
      "output_type": "stream",
      "text": [
       "{'pass': True, 'bits_failure': '0.0%'}\n",
-<<<<<<< HEAD
       "{'pass': False, 'bits_failure': '66.6667%'}\n"
-=======
-      "{'pass': False, 'bits_failure': '71.4286%'}\n"
->>>>>>> c11ae4b76f0511bc1e4d157df4ff09e0ff149bf9
      ]
     }
    ],
@@ -239,11 +227,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \n",
+       "\\text{Statevector} = \\begin{bmatrix}\n",
+       "0.65328 \\\\\n",
+       "-0.65328 \\\\\n",
+       "-0.2706 \\\\\n",
+       "-0.2706\n",
+       "\\end{bmatrix}\n",
+       "$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "\n"
    ]
