last changes to overview

--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -8,10 +8,8 @@
    "source": [
     "import numpy as np\n",
     "from qiskit import *\n",
-    "from qiskit_ionq_provider import IonQProvider \n",
     "from qiskit.providers.jobstatus import JobStatus\n",
     "#Call provider and set token value\n",
-    "provider = IonQProvider(token='BFmvdArkiCbsS12r4LZf5VgYDo4HngsS')\n",
     "from qiskit_textbook.tools import array_to_latex\n",
     "\n",
     "from signature import *\n",
@@ -20,10 +18,46 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We display a quantum circuit used for hashing. The message is 1001 and the keys are 1011, 1101, 1001, and 0010."
+    "We generate a legitimate signature and a forged signature. In the forged signature, the private keys do do not correspond to the public keys. We attempt to validate each signature.\n",
+    "\n",
+    "Let's say Alice wants to trasfer 1 qrypto BTC to Bob...."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "alices_signature = Signed_Transaction(\"A-->B(1qBTC)\").get_signature()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "num of bits in transaction:  78\n",
+      "\n",
+      "first bit signature:\n",
+      "bit:  1\n",
+      "Private keys:  ['0011', '0010', '0101']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"num of bits in transaction: \", len(alices_signature))\n",
+    "print()\n",
+    "print(\"first bit signature:\")\n",
+    "print(\"bit: \", alices_signature[0]['m_bit'])\n",
+    "print(\"Private keys: \", alices_signature[0]['priv_keys'])"
    ]
   },
   {
@@ -35,20 +69,127 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "         ┌───┐                                                            »\n",
-      "q4546_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
-      "         ├───┤      │            │           │           │          │     »\n",
-      "q4546_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
-      "         └───┘┌─────┴─────┐┌─────┴─────┐┌────┴─────┐┌────┴────┐┌────┴────┐»\n",
-      "q4546_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
-      "              └───────────┘└───────────┘└──────────┘└─────────┘└─────────┘»\n",
-      "«                                         \n",
-      "«q4546_0: ─────■──────────o─────────■─────\n",
-      "«              │          │         │     \n",
-      "«q4546_1: ─────o──────────■─────────■─────\n",
-      "«         ┌────┴────┐┌────┴────┐┌───┴────┐\n",
-      "«q4546_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
-      "«         └─────────┘└─────────┘└────────┘\n"
+      "Some Public keys for the first bit: \n",
+      "\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \n",
+       "\\begin{bmatrix}\n",
+       "\\tfrac{1}{2} \\\\\n",
+       "0 \\\\\n",
+       "-\\tfrac{1}{2} \\\\\n",
+       "\\tfrac{1}{\\sqrt{2}}\n",
+       "\\end{bmatrix}\n",
+       "$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \n",
+       "\\begin{bmatrix}\n",
+       "-\\tfrac{1}{2} \\\\\n",
+       "0 \\\\\n",
+       "\\tfrac{1}{2} \\\\\n",
+       "\\tfrac{1}{\\sqrt{2}}\n",
+       "\\end{bmatrix}\n",
+       "$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    },
+    {
+     "data": {
+      "text/latex": [
+       "$\\displaystyle \n",
+       "\\begin{bmatrix}\n",
+       "0 \\\\\n",
+       "-\\tfrac{1}{\\sqrt{2}} \\\\\n",
+       "\\tfrac{1}{\\sqrt{2}} \\\\\n",
+       "0\n",
+       "\\end{bmatrix}\n",
+       "$"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Math object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Some Public keys for the first bit: \")\n",
+    "print()\n",
+    "\n",
+    "for i in alices_signature[0]['pub_keys']['f_k0']:\n",
+    "    print(array_to_latex(i))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Where did these public come from?? A Quantum One-way Hash Function! We display a quantum circuit used for hashing. The private key to be hashed is the integer 9:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          ┌───┐                                                            »\n",
+      "q19525_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
+      "          ├───┤      │            │           │           │          │     »\n",
+      "q19525_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
+      "          └───┘┌─────┴─────┐┌─────┴─────┐┌────┴─────┐┌────┴────┐┌────┴────┐»\n",
+      "q19525_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
+      "               └───────────┘└───────────┘└──────────┘└─────────┘└─────────┘»\n",
+      "«                                          \n",
+      "«q19525_0: ─────■──────────o─────────■─────\n",
+      "«               │          │         │     \n",
+      "«q19525_1: ─────o──────────■─────────■─────\n",
+      "«          ┌────┴────┐┌────┴────┐┌───┴────┐\n",
+      "«q19525_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
+      "«          └─────────┘└─────────┘└────────┘\n"
      ]
     }
    ],
@@ -57,15 +198,15 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The state vector for the resulting quantum state."
+    "The state vector for the resulting quantum state:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -97,77 +238,61 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We generate a legitimate signature and a forged signature. In the forged signature, the private keys do do not correspond to the public keys. We attempt to validate each signature."
+    "Now let's validate Alice's signature:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "signed_message = Signed_Transaction(\"1234556\")\n",
-    "forged_message = Forgery(\"1234556\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'pass': True, 'bits_failure': '0.0%'}\n",
-      "{'pass': False, 'bits_failure': '66.6667%'}\n"
+      "{'pass': True, 'bits_failure': '0.0%'}\n"
      ]
     }
    ],
    "source": [
-    "good_validation = Validation(signed_message)\n",
-    "print(good_validation.validate())\n",
-    "\n",
-    "bad_validation = Validation(forged_message)\n",
-    "print(bad_validation.validate())"
+    "alice_validation = Validation(alices_signature)\n",
+    "print(alice_validation.validate())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Alices message passed! Now let's say Eve wants to forge a transaction, say using Bob's public keys..."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'pass': False, 'bits_failure': '80.7692%'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# passes = 0\n",
-    "# fails = 0\n",
-    "\n",
-    "# for i in range(5):\n",
-    "#     # Message bit\n",
-    "#     b = 0\n",
-    "\n",
-    "#     sig = Signature(b)\n",
-    "#     sig.get_signature()['pub_keys']['f_k1']\n",
-    "#     val = Validation(sig)\n",
-    "    \n",
-    "    \n",
-    "#     result = val.result()\n",
-    "\n",
-    "#     if result['passed']:\n",
-    "#         passes += 1\n",
-    "#     else:\n",
-    "#         fails += 1\n",
-    "\n",
-    "# print(passes, fails)"
+    "eves_transaction = Forgery(\"B-->E(1qBTC)\").get_signature()\n",
+    "eve_validation = Validation(eves_transaction)\n",
+    "print(eve_validation.validate())"
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We show an the circuit for a swap test. The swap test tries to determine whether two quantum states are equal."
+    "We see Eve's Signature failed! 81% of the bits did not pass. How was this done? A Swap test! We show a the circuit for a swap test. The swap test tries to determine whether two quantum states are equal:"
    ]
   },
   {
@@ -224,51 +349,6 @@
     "\n",
     "swap_test(pub_0, pub_1, verbose=True)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/latex": [
-       "$\\displaystyle \n",
-       "\\text{Statevector} = \\begin{bmatrix}\n",
-       "0.65328 \\\\\n",
-       "-0.65328 \\\\\n",
-       "-0.2706 \\\\\n",
-       "-0.2706\n",
-       "\\end{bmatrix}\n",
-       "$"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Math object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -287,7 +367,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
