--- a/Overview.ipynb
+++ b/Overview.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -48,7 +48,7 @@
       "\n",
       "first bit signature:\n",
       "bit:  1\n",
-      "Private keys:  ['0011', '0010', '0101']\n"
+      "Private keys:  ['1110', '1001', '1000']\n"
      ]
     }
    ],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -78,10 +78,10 @@
       "text/latex": [
        "$\\displaystyle \n",
        "\\begin{bmatrix}\n",
-       "\\tfrac{1}{2} \\\\\n",
+       "\\tfrac{1}{\\sqrt{2}} \\\\\n",
+       "\\tfrac{1}{\\sqrt{2}} \\\\\n",
        "0 \\\\\n",
-       "-\\tfrac{1}{2} \\\\\n",
-       "\\tfrac{1}{\\sqrt{2}}\n",
+       "0\n",
        "\\end{bmatrix}\n",
        "$"
       ],
@@ -104,7 +104,7 @@
       "text/latex": [
        "$\\displaystyle \n",
        "\\begin{bmatrix}\n",
-       "-\\tfrac{1}{2} \\\\\n",
+       "\\tfrac{1}{2} \\\\\n",
        "0 \\\\\n",
        "\\tfrac{1}{2} \\\\\n",
        "\\tfrac{1}{\\sqrt{2}}\n",
@@ -132,7 +132,7 @@
        "\\begin{bmatrix}\n",
        "0 \\\\\n",
        "-\\tfrac{1}{\\sqrt{2}} \\\\\n",
-       "\\tfrac{1}{\\sqrt{2}} \\\\\n",
+       "-\\tfrac{1}{\\sqrt{2}} \\\\\n",
        "0\n",
        "\\end{bmatrix}\n",
        "$"
@@ -169,27 +169,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "          ┌───┐                                                            »\n",
-      "q19525_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
-      "          ├───┤      │            │           │           │          │     »\n",
-      "q19525_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
-      "          └───┘┌─────┴─────┐┌─────┴─────┐┌────┴─────┐┌────┴────┐┌────┴────┐»\n",
-      "q19525_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
-      "               └───────────┘└───────────┘└──────────┘└─────────┘└─────────┘»\n",
-      "«                                          \n",
-      "«q19525_0: ─────■──────────o─────────■─────\n",
-      "«               │          │         │     \n",
-      "«q19525_1: ─────o──────────■─────────■─────\n",
-      "«          ┌────┴────┐┌────┴────┐┌───┴────┐\n",
-      "«q19525_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
-      "«          └─────────┘└─────────┘└────────┘\n"
+      "         ┌───┐                                                            »\n",
+      "q1810_0: ┤ H ├──────o────────────■───────────o───────────■──────────o─────»\n",
+      "         ├───┤      │            │           │           │          │     »\n",
+      "q1810_1: ┤ H ├──────o────────────o───────────■───────────■──────────o─────»\n",
+      "         └───┘┌─────┴─────┐┌─────┴─────┐┌────┴─────┐┌────┴────┐┌────┴────┐»\n",
+      "q1810_2: ─────┤ RY(11π/4) ├┤ RY(13π/4) ├┤ RY(9π/4) ├┤ RY(π/2) ├┤ RY(22π) ├»\n",
+      "              └───────────┘└───────────┘└──────────┘└─────────┘└─────────┘»\n",
+      "«                                         \n",
+      "«q1810_0: ─────■──────────o─────────■─────\n",
+      "«              │          │         │     \n",
+      "«q1810_1: ─────o──────────■─────────■─────\n",
+      "«         ┌────┴────┐┌────┴────┐┌───┴────┐\n",
+      "«q1810_2: ┤ RY(26π) ├┤ RY(18π) ├┤ RY(4π) ├\n",
+      "«         └─────────┘└─────────┘└────────┘\n"
      ]
     }
    ],
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -271,14 +271,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'pass': False, 'bits_failure': '80.7692%'}\n"
+      "{'pass': False, 'bits_failure': '75.641%'}\n"
      ]
     }
    ],
@@ -297,39 +297,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "                               ┌───┐                                          »\n",
-      "q4530_0: ──────────────────────┤ H ├──────────────────────────────────■───────»\n",
-      "         ┌─────────────────────┴───┴─────────────────────┐┌───┐       │  ┌───┐»\n",
-      "q4530_1: ┤0                                              ├┤ X ├───────■──┤ X ├»\n",
-      "         │  initialize(0.65328,-0.65328,-0.2706,-0.2706) │└─┬─┘┌───┐  │  └─┬─┘»\n",
-      "q4530_2: ┤1                                              ├──┼──┤ X ├──┼────┼──»\n",
-      "         ├───────────────────────────────────────────────┤  │  └─┬─┘┌─┴─┐  │  »\n",
-      "q4530_3: ┤0                                              ├──■────┼──┤ X ├──■──»\n",
-      "         │  initialize(0.65328,-0.65328,-0.2706,-0.2706) │       │  └───┘     »\n",
-      "q4530_4: ┤1                                              ├───────■────────────»\n",
-      "         └───────────────────────────────────────────────┘                    »\n",
-      " c269: 1/═════════════════════════════════════════════════════════════════════»\n",
-      "                                                                              »\n",
-      "«              ┌───┐┌─┐\n",
-      "«q4530_0: ──■──┤ H ├┤M├\n",
-      "«           │  └───┘└╥┘\n",
-      "«q4530_1: ──┼────────╫─\n",
-      "«           │  ┌───┐ ║ \n",
-      "«q4530_2: ──■──┤ X ├─╫─\n",
-      "«           │  └─┬─┘ ║ \n",
-      "«q4530_3: ──┼────┼───╫─\n",
-      "«         ┌─┴─┐  │   ║ \n",
-      "«q4530_4: ┤ X ├──■───╫─\n",
-      "«         └───┘      ║ \n",
-      "« c269: 1/═══════════╩═\n",
-      "«                    0 \n"
+      "                        ┌───┐                                         ┌───┐┌─┐\n",
+      "q8259_0: ───────────────┤ H ├────────────────────────────■─────────■──┤ H ├┤M├\n",
+      "         ┌──────────────┴───┴───────────────┐┌───┐       │  ┌───┐  │  └───┘└╥┘\n",
+      "q8259_1: ┤0                                 ├┤ X ├───────■──┤ X ├──┼────────╫─\n",
+      "         │  initialize(0.70711,0.70711,0,0) │└─┬─┘┌───┐  │  └─┬─┘  │  ┌───┐ ║ \n",
+      "q8259_2: ┤1                                 ├──┼──┤ X ├──┼────┼────■──┤ X ├─╫─\n",
+      "         ├──────────────────────────────────┤  │  └─┬─┘┌─┴─┐  │    │  └─┬─┘ ║ \n",
+      "q8259_3: ┤0                                 ├──■────┼──┤ X ├──■────┼────┼───╫─\n",
+      "         │  initialize(0.70711,0.70711,0,0) │       │  └───┘     ┌─┴─┐  │   ║ \n",
+      "q8259_4: ┤1                                 ├───────■────────────┤ X ├──■───╫─\n",
+      "         └──────────────────────────────────┘                    └───┘      ║ \n",
+      " c470: 1/═══════════════════════════════════════════════════════════════════╩═\n",
+      "                                                                            0 \n"
      ]
     },
     {
@@ -338,16 +325,23 @@
        "0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pub_0 = signed_message.get_signature()[0]['pub_keys']['f_k0'][0]\n",
-    "pub_1 = signed_message.get_signature()[0]['pub_keys']['f_k0'][0]\n",
+    "pub_0 = alices_signature[0]['pub_keys']['f_k0'][0]\n",
+    "pub_1 = alices_signature[0]['pub_keys']['f_k0'][0]\n",
     "\n",
     "swap_test(pub_0, pub_1, verbose=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Swap test outputs 0, Success!"
    ]
   }
  ],
